Project-DevOps-devops-prod.online/monitoring/prometheus-deployment/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.devops-prod.online
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
